fix(android): adjust bottom bar for nav overlap

--- a/mobile/calorie-counter/src/app/app.component.scss
+++ b/mobile/calorie-counter/src/app/app.component.scss
@@ -27,7 +27,7 @@
 .container {
   padding: 12px;
   margin-top: 64px;
-  margin-bottom: 56px;
+  margin-bottom: calc(56px + env(safe-area-inset-bottom));
 }
 
 .bottombar {
@@ -37,6 +37,7 @@
   right: 0;
   display: flex;
   justify-content: space-around;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .bottombar a {
